# controllers/authController.js
@@ -82,7 +82,5 @@ exports.refresh = async (req, res) => {
 };
 
 exports.logout = async (req, res) => {
-  //#swagger.tags=["Authentication"]
-  //#swagger.summary="Logout user (client should discard token)"
   res.status(200).json({ message: "Logged out successfully (client must discard token)" });
 };
